--- a/style.css
+++ b/style.css
@@ -373,6 +373,7 @@ aside:nth-child(odd) span {
   border-top: 1px solid #c3c3c3;
   bottom: 0;
   color: #ffce00;
+  font-size:13px;
   padding: 4px;
   position: fixed;
   right: 0;
