--- a/style.css
+++ b/style.css
@@ -155,6 +155,17 @@ mark {
   background: transparent;
 }
 
+summary {
+  color: #bbb;
+  display: inline-block;
+  font-family: Verdana,sans-serif;
+  height: 16px;
+  overflow: hidden;
+  padding: 0 2px;
+  white-space: nowrap;
+  width: 683px;
+}
+
 #chat span {
   display: inline-block;
   width: 546px;
