--- a/style.css
+++ b/style.css
@@ -119,7 +119,7 @@ a:hover {
   top: 25px;
 }
 
-#chatpublic, #chatbot {
+#chatpublic, #chatautomated {
   display: none;
 }
 
@@ -149,7 +149,8 @@ time {
 
 mark {
   display: inline-block;
-  width: 95px;
+  width: 91px;
+  margin-right:4px;
   overflow:hidden;
   vertical-align: top;
   background: transparent;
@@ -173,12 +174,12 @@ summary {
 
 #chatinput {
   line-height:22px;
-  padding: 0 2px;
+  padding: 0 4px;
   position: absolute;
   bottom: 0;
   left: 0;
   background: rgba(8, 48, 78, 0.9);
-  width: 704px;
+  width: 700px;
   border: 1px solid #20A8B1;
   z-index: 3001;
 }
@@ -188,7 +189,7 @@ summary {
   padding: 0 4px;
   display: inline-block;
   font-size: 12.6px;
-  width: 86px;
+  width: 84px;
   color: red;
   padding-left: 2px;
 }
@@ -198,7 +199,7 @@ summary {
   font-size: 12.6px;
   font-family: Verdana,sans-serif;
   color: #EEEEEE;
-  width: 560px
+  width: 558px
 }
 
 
