--- a/style.css
+++ b/style.css
@@ -106,6 +106,11 @@ a:hover {
   border-bottom: 0;
 }
 
+#em {
+  color: red;
+  font-style: normal;
+}
+
 #chat.expand {
   height:auto;
   top: 25px;
