--- a/style.css
+++ b/style.css
@@ -438,6 +438,17 @@ aside:nth-child(odd) span {
   height: 14px;
 }
 
+.meter-rel {
+  position: relative;
+  left: 0;
+  top: 0;
+}
+
+.meter-level {
+  position: absolute;
+  top: -2px;
+  left: 25px;
+}
 /* links below resos */
 
 .linkdetails {
