--- a/style.css
+++ b/style.css
@@ -448,6 +448,7 @@ aside:nth-child(odd) span {
   position: absolute;
   top: -2px;
   left: 25px;
+  text-shadow: 2px 2px #FFFFFF;
 }
 /* links below resos */
 
