--- a/style.css
+++ b/style.css
@@ -448,7 +448,7 @@ aside:nth-child(odd) span {
   position: absolute;
   top: -2px;
   left: 25px;
-  text-shadow: 2px 2px #FFFFFF;
+  text-shadow: black 0.0em 0.0em 0.2em;
 }
 /* links below resos */
 
