--- a/style.css
+++ b/style.css
@@ -70,6 +70,11 @@ a:hover {
   z-index: 1000;
 }
 
+.leaflet-control-layers-overlays label.disabled {
+  text-decoration: line-through;
+  cursor: help;
+}
+
 .help {
   cursor: help;
 }
