--- a/style.css
+++ b/style.css
@@ -474,9 +474,11 @@ aside:nth-child(odd) span {
 
 .meter-level {
   position: absolute;
-  top: -2px;
-  left: 25px;
-  text-shadow: black 0.0em 0.0em 0.3em;
+  top: 0px;
+  left: 8px;
+  font-size: 80%;
+  line-height: 18px;
+  text-shadow: 0.0em 0.0em 0.3em #808080;
 }
 /* links below resos */
 
