--- a/style.css
+++ b/style.css
@@ -35,6 +35,19 @@ body {
   overflow-x:hidden;
 }
 
+#sidebartoggle {
+  display: block;
+  padding: 5px;
+  position: absolute;
+  top: 50%;
+  z-index: 3000;
+  background-color: rgba(8, 48, 78, 0.9);
+  color: #FFCE00;
+  border: 1px solid #20A8B1;
+  border-right: none;
+  border-radius: 5px 0 0 5px;
+  text-decoration: none;
+}
 
 .enl {
   color: #03fe03 !important;
