CSS for clipboard-aware chat modified to be backwards compatible

--- a/style.css
+++ b/style.css
@@ -195,7 +195,7 @@ summary {
   width: 683px;
 }
 
-#chat .blockquote {
+#chat span {
   display: inline-block;
   width: 540px;
 }
@@ -214,7 +214,6 @@ summary {
 
 #chat .invisibleseparator {
     color: rgba(8, 48, 78, 0.0);
-    display: inline-block;
     width: 0px;
 }
 
