improve portal number separation from background (trick by jonatkins)

--- a/style.css
+++ b/style.css
@@ -369,7 +369,7 @@ h3 {
   font-size: 40px;
   position: absolute;
   right: 10px;
-  text-shadow: 0 0 2px #000000, 0 0 5px #ffffff;
+  text-shadow: -1px -1px #000, 1px -1px #000, -1px 1px #000, 1px 1px #000, 0 0 5px #fff;
   top: 100px;
 }
 
