--- a/style.css
+++ b/style.css
@@ -18,6 +18,13 @@ body {
   width: 340px;
   bottom: 45px;
   z-index: 1001;
+
+  /* 
+   * NOTE: following 2 items are needed for back compatability 
+   * between new css and old plugin versions (0.4) as of 2013-02-11 UTC.
+   */
+  background-color: rgba(8, 48, 78, 1);
+  border-left: 1px solid #20A8B1;
 }
 
 #sidebar {
