--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 body:after {
   background: none repeat scroll 0 0 #FFFFFF;
   color: red;
-  content: "Please update your total conversion script or it will not work properly anymore.";
+  content: "Please update your total conversion script or it will not work properly anymore. \a Google \"ingress total conversion\".";
   display: block;
   font-weight: bold;
   left: 381px;
@@ -10,6 +10,8 @@ body:after {
   position: absolute;
   top: 0;
   z-index: 9001;
+  white-space: pre;
+  text-align: center;
 }
 
 /* general rules ******************************************************/
