--- a/style.css
+++ b/style.css
@@ -450,6 +450,10 @@ h3 {
   border: 1px solid #666;
 }
 
+.mods span:not([title]) {
+  cursor: auto;
+}
+
 .res .mods span, .res .meter {
   border: 1px solid #0076b6;
 }
@@ -615,14 +619,20 @@ aside:nth-child(odd) span {
 
 /* tooltips */
 .ui-tooltip {
-  background: #1E425D;
-  border: 1px solid #20A8B1;
-  box-shadow:0 0 7px #000;
-  color: #EEEEEE;
-  font-family: Verdana, sans-serif;
-  font-size:13px;
   max-width: 300px;
-  padding: 8px;
   position: absolute;
   z-index: 9999;
+  background-color: #fff;
+  border: 1px solid #ccc;
+  color: #222;
+  font: 13px/15px "Helvetica Neue", Arial, Helvetica, sans-serif;
+  padding: 2px 4px;
+}
+
+td {
+  padding: 0;
+}
+
+td + td {
+  padding-left: 4px;
 }
