--- a/style.css
+++ b/style.css
@@ -647,8 +647,8 @@ aside {
   border: 2px solid #f8ff5e;
 }
 
-/* tooltips */
-.ui-tooltip {
+/* tooltips, dialogs */
+.ui-tooltip, .ui-dialog {
   max-width: 300px;
   position: absolute;
   z-index: 9999;
@@ -657,6 +657,50 @@ aside {
   color: #222;
   font: 13px/15px "Helvetica Neue", Arial, Helvetica, sans-serif;
   padding: 2px 4px;
+}
+
+.ui-dialog {
+  border: 1px solid #0F0F0F;
+  padding: 0;
+  border-radius: 2px;
+}
+
+.ui-widget-overlay {
+  height: 100%;
+  left: 0;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index:9998;
+  background:  #444;
+  opacity: 0.6;
+}
+
+.ui-dialog-titlebar {
+  display: none;
+}
+
+.ui-dialog-content {
+  padding: 12px;
+  overflow-y: auto;
+  overflow-x: hidden;
+  max-height: 600px !important;
+  max-width: 700px !important;
+}
+
+.ui-dialog-buttonpane {
+  background: #F2F2F2;
+  padding: 12px;
+  border-top: 1px solid #E6E6E6;
+}
+
+.ui-dialog-buttonset {
+  text-align: right;
+}
+
+.ui-dialog-buttonset button {
+  padding: 2px;
+  min-width: 80px;
 }
 
 td {
