--- a/style.css
+++ b/style.css
@@ -686,6 +686,11 @@ aside {
   overflow-x: hidden;
   max-height: 600px !important;
   max-width: 700px !important;
+  text-align: center;
+}
+
+.ui-dialog a {
+  color: #0000ca;
 }
 
 .ui-dialog-buttonpane {
