most likely fix #341.
The fix has been ported to 0.7.x, too. The layer chooser should be
much more compact on chrome now.

--- a/style.css
+++ b/style.css
@@ -401,6 +401,11 @@ input {
   font-style: italic;
 }
 
+.leaflet-control-layers input {
+  height: auto;
+  padding: 0;
+}
+
 
 /* portal title and image */
 h3 {
