MU counts for fields with limiting for small fields
Only at higher zoom levels will counts for small fields show.

--- a/style.css
+++ b/style.css
@@ -94,12 +94,12 @@ a:hover {
 }
 
 /* field mu count */
-
 .fieldmu {
   color: #FFCE00;
   font-size:13px;
   font-family: "coda",arial,helvetica,sans-serif; /*override leaflet-container */
   text-align: center;
+  text-shadow: 0 0 0.2em black, 0 0 0.2em black, 0 0 0.2em black;
 }
 
 
