--- a/style.css
+++ b/style.css
@@ -679,15 +679,14 @@ aside {
   max-width: 300px;
   position: absolute;
   z-index: 9999;
-  background-color: #fff;
-  border: 1px solid #ccc;
-  color: #222;
-  font: 13px/15px "Helvetica Neue", Arial, Helvetica, sans-serif;
+  background-color: rgba(8, 48, 78, 0.9);
+  border: 1px solid #20A8B1;
+  color: #eee;
+  font: 13px/15px "coda","Helvetica Neue", Arial, Helvetica, sans-serif;
   padding: 2px 4px;
 }
 
 .ui-dialog {
-  border: 1px solid #0F0F0F;
   padding: 0;
   border-radius: 2px;
 }
@@ -720,9 +719,8 @@ aside {
 }
 
 .ui-dialog-buttonpane {
-  background: #F2F2F2;
   padding: 12px;
-  border-top: 1px solid #E6E6E6;
+  border-top: 1px solid #20A8B1;
 }
 
 .ui-dialog-buttonset {
@@ -732,6 +730,13 @@ aside {
 .ui-dialog-buttonset button {
   padding: 2px;
   min-width: 80px;
+  color: #FFCE00;
+  border: 1px solid #FFCE00;
+  background-color: rgba(8, 48, 78, 0.9);
+}
+
+.ui-dialog-buttonset button:hover {
+  text-decoration: underline;
 }
 
 td {
