--- a/mobile/smartphone.css
+++ b/mobile/smartphone.css
@@ -16,11 +16,6 @@ body {
 #chatcontrols {
   height: 38px;
   width: 100%;
-  display: flexbox;
-  display: -webkit-box;
-  display: -webkit-flexbox;
-  display: -moz-flexbox;
-  display: -moz-box;
 }
 
 /* hide shrink button */
@@ -29,15 +24,15 @@ body {
 }
 
 #chatcontrols a {
+  width: 50px;
   height:36px;
   overflow: hidden;
   vertical-align: middle;
   line-height: 36px;
   text-decoration: none;
-  -webkit-box-flex: 1;
-  -moz-box-flex: 1;
-  -webkit-flex: 1;
-  flex: 1;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 #chat {
