added getLocation/clear cache and print version buttons to menu

--- a/mobile/res/menu/main.xml
+++ b/mobile/res/menu/main.xml
@@ -4,4 +4,19 @@
 		android:showAsAction="never"
 		android:title="@string/reload"></item>
 
+	<item android:id="@+id/version_num"
+		android:orderInCategory="100"
+		android:showAsAction="never"
+		android:title="@string/version"></item>
+
+	<item android:id="@+id/cache_clear"
+		android:orderInCategory="90"
+		android:showAsAction="never"
+		android:title="@string/cache_clear"></item>
+
+	<item android:id="@+id/locate"
+		android:orderInCategory="80"
+		android:showAsAction="never"
+		android:title="@string/locate"></item>
+
 </menu>
