--- a/mobile/res/menu/main.xml
+++ b/mobile/res/menu/main.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
 	<item android:id="@+id/reload_button"
 		android:orderInCategory="100"
-		android:showAsAction="never"
+		android:showAsAction="ifRoom"
 		android:title="@string/reload"></item>
 
 	<item android:id="@+id/version_num"
@@ -16,7 +16,7 @@
 
 	<item android:id="@+id/locate"
 		android:orderInCategory="80"
-		android:showAsAction="never"
+		android:showAsAction="ifRoom"
 		android:title="@string/locate"></item>
 
 </menu>
