--- a/style.css
+++ b/style.css
@@ -99,10 +99,11 @@ a:hover {
 /* field mu count */
 .fieldmu {
   color: #FFCE00;
-  font-size:13px;
+  font-size: 13px;
   font-family: "coda",arial,helvetica,sans-serif; /*override leaflet-container */
   text-align: center;
   text-shadow: 0 0 0.2em black, 0 0 0.2em black, 0 0 0.2em black;
+  pointer-events: none;
 }
 
 
