--- a/external/leaflet.css
+++ b/external/leaflet.css
@@ -285,7 +285,7 @@
 	        border-radius: 8px;
 	}
 .leaflet-control-layers-toggle {
-	background-image: url(https://raw.github.com/breunigs/ingress-intel-total-conversion/gh-pages/dist/images/layers.png);
+	background-image: url(http://iitc.jonatkins.com/dist/images/layers.png);
 	width: 36px;
 	height: 36px;
 	}
