Plugin AP List: Add table header and change how the table is bulit

--- a/plugins/ap-list.css
+++ b/plugins/ap-list.css
@@ -46,11 +46,16 @@
 }
 
 .ap-list-td-link-eny {
-  width: 80%;
+  width: 70%;
 }
 
 .ap-list-td-link-frd {
-  width: 85%;
+  width: 75%;
+}
+
+.ap-list-td-ap {
+  width: 18%;
+  white-space:nowrap;
 }
 
 .ap-list-checkbox-outer {
